Update ChristmasDelivery.html (Autoreconnect)

--- a/ChristmasDelivery.html
+++ b/ChristmasDelivery.html
@@ -335,6 +335,10 @@
             })
             if (client.room.checkedLocations.length == client.room.allLocations.length)
                 client.goal()
+            
+            client.socket.on("disconnected", () => {
+                client.login(url, username, "ChristmasDelivery", { password, version: { major: 0, minor: 5, build: 1 }, items: AP.itemsHandlingFlags.all }).catch(console.error)
+            })
         }
         catch { }
 
